--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ filelock==3.7.1
 Flask==2.1.2
 fr-core-news-md @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.3.0/fr_core_news_md-3.3.0-py3-none-any.whl
 fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.3.0/fr_core_news_sm-3.3.0-py3-none-any.whl
+gunicorn==20.1.0
 huggingface-hub==0.8.1
 idna==3.3
 importlib-metadata==4.11.4
@@ -38,7 +39,7 @@ torch==1.12.0
 tqdm==4.64.0
 transformers==4.20.1
 typer==0.4.1
-typing-extensions==4.2.0
+typing_extensions==4.2.0
 urllib3==1.26.9
 wasabi==0.9.1
 Werkzeug==2.1.2
