--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,46 @@
+blis==0.7.7
+catalogue==2.0.7
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+click==8.1.3
+colorama==0.4.4
+cymem==2.0.6
+filelock==3.7.1
 Flask==2.1.2
+fr-core-news-md @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.3.0/fr_core_news_md-3.3.0-py3-none-any.whl
+fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.3.0/fr_core_news_sm-3.3.0-py3-none-any.whl
 gunicorn==20.1.0
-
+huggingface-hub==0.8.1
+idna==3.3
+importlib-metadata==4.11.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+langcodes==3.3.0
+MarkupSafe==2.1.1
+murmurhash==1.0.7
+numpy==1.22.4
+packaging==21.3
+pathy==0.6.1
+preshed==3.0.6
+pydantic==1.8.2
+pyparsing==3.0.9
+PyYAML==6.0
+regex==2022.6.2
+requests==2.27.1
+sentencepiece==0.1.96
+smart-open==5.2.1
+spacy==3.3.0
+spacy-legacy==3.0.9
+spacy-loggers==1.0.2
+srsly==2.4.3
+thinc==8.0.16
+tokenizers==0.12.1
+torch==1.12.0
+tqdm==4.64.0
+transformers==4.20.1
+typer==0.4.1
+typing_extensions==4.2.0
+urllib3==1.26.9
+wasabi==0.9.1
+Werkzeug==2.1.2
+zipp==3.8.0
